<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/faq_title" />

    <EditText
        android:id="@+id/searchFAQInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/faq_search_hint"
        android:maxLength="100"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Spinner
        android:id="@+id/categoriesFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/faq_categories"
        app:layout_constraintTop_toBottomOf="@id/searchFAQInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/faqList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/categoriesFilter"
        app:layout_constraintBottom_toTopOf="@id/contactSupportLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/noResultsMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/faq_no_results"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/categoriesFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:gravity="center" />

    <Button
        android:id="@+id/contactSupportLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_contact_support"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout> 